lecture10/raisetech10-vpc.yml
AWSTemplateFormatVersion: 2010-09-09
Parameters:
  MyParameter:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /para/ec2-sg/myip
Resources:
# VPCの作成
  myVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: raisetech10
# インターネットゲートウェイの作成        
  myIGW:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
      - Key: Name
        Value: raisetch10
#　インターネットゲートウェイとVPCの紐付け
  AttachIGW:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      InternetGatewayId: !Ref myIGW
      VpcId: !Ref myVPC
# ルートテーブルの作成
  myRouteTable01:
    Type: "AWS::EC2::RouteTable"
    Properties:
      Tags:
      - Key: Name
        Value: raisetech10
      VpcId: !Ref myVPC
# ルートテーブルのルーティング設定
  myRoute01:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref myIGW
      RouteTableId: !Ref myRouteTable01
# ルートテーブルとサブネットの関連付け
  myRouteTableAssociation01a:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref myRouteTable01
      SubnetId: !Ref publicsubnet1a
  myRouteTableAssociation01c:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref myRouteTable01
      SubnetId: !Ref publicsubnet1c
# サブネットの作成
  publicsubnet1a:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Sub ${AWS::Region}a
      VpcId: !Ref myVPC
      CidrBlock: 10.0.32.0/20
      Tags:
        - Key: Name
          Value: l10-public-1a
  privatesubnet1a:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Sub ${AWS::Region}a
      VpcId: !Ref myVPC
      CidrBlock: 10.0.48.0/20
      Tags:
        - Key: Name
          Value: l10-private-1a
  publicsubnet1c:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Sub ${AWS::Region}c
      VpcId: !Ref myVPC
      CidrBlock: 10.0.64.0/20
      Tags:
        - Key: Name
          Value: l10-public-1c
  privatesubnet1c:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Sub ${AWS::Region}c
      VpcId: !Ref myVPC
      CidrBlock: 10.0.80.0/20
      Tags:
        - Key: Name
          Value: l10-private-1c
#　セキュリティーグループの作成
  secGroupName1:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: ec2-rds
      GroupDescription: raisetech10
      VpcId: !Ref myVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 
            Fn::Sub: "${MyParameter}"
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          SourceSecurityGroupId: sg-00c4345b5cb05b10e
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name 
          Value: l10-ec2-rds-sg
  secGroupName2:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: rds-ec2
      GroupDescription: raisetech10
      VpcId: !Ref myVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: sg-0d2ace5a1a64c9e86
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name 
          Value: l10-rds-ec2-sg
  secGroupName3:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: elb
      GroupDescription: raisetech10
      VpcId: !Ref myVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name 
          Value: l10-elb-ec2-sg

Outputs:
# VPC
  l10VPC:
    Value: !Ref myVPC
    Export:
      Name: l10-vpc
# サブネットグループ
  Subnetpublic1a: 
    Value: !Ref publicsubnet1a
    Export:
      Name: publicsubnet1a
  Subnetprivate1a: 
    Value: !Ref privatesubnet1a
    Export:
      Name: privatesubnet1a
  Subnetpublic1c: 
    Value: !Ref publicsubnet1c
    Export:
      Name: publicsubnet1c
  Subnetprivate1c: 
    Value: !Ref privatesubnet1c
    Export:
      Name: privatesubnet1c
# セキュリティグループ
  SGec2rds:
    Value: !Ref secGroupName1
    Export:
      Name: secGroupName1
  SGrdsec2:
    Value: !Ref secGroupName2
    Export:
      Name: secGroupName2
  SGelbec2:
    Value: !Ref secGroupName3
    Export:
      Name: secGroupName3
